--- a/E-Auction.BLL/E-Auction.BLL.csproj
+++ b/E-Auction.BLL/E-Auction.BLL.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Mappers\OrganizationProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ApplicationUserService.cs" />
     <Compile Include="Services\AuctionManagementService.cs" />
     <Compile Include="Services\OrganizationManagementService.cs" />
   </ItemGroup>
