--- a/E-Auction.UnitTests/App.config
+++ b/E-Auction.UnitTests/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="E-AuctionConnectionString" connectionString="User Id=sa; Password=Shag1115; Persist Security Info=False;Initial Catalog=E-AuctionDb;Data Source=SD\Test_SQL" providerName="System.Data.SqlClient" />
+	  <add name="E-AuctionConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=E-Auction;Data Source=DELL\SQLEXPRESS" providerName="System.Data.SqlClient" />
+	  <add name="E-IdentityConnectionString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=E-IdentityAuctionDb;Data Source=DELL\SQLEXPRESS" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
